# yew-todo-list

./: Cargo.toml  README.md  deploy.sh  index.html
.github/workflows/: gh-pages.yml
mock-data/: items.json
src/: filter.rs  footer.rs  info.rs  main.rs  new_todo.rs  route.rs  todo_list.rs
