[package]
name = "yew-todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
uuid = { version = "1.1.2", features = ["js", "v4", "fast-rng", "macro-diagnostics"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"
wasm-bindgen = "0.2.83"
strum = "0.24"
strum_macros = "0.24"
yew-router = { git = "https://github.com/yewstack/yew.git" }
stylist = { version = "0.10", features = ["yew_integration"] }
